--- a/app/src/main/res/layout/activity_bookmark_details.xml
+++ b/app/src/main/res/layout/activity_bookmark_details.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
     <data>
         <variable
             name="bookmarkDetailsView"
@@ -60,10 +63,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/name"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/textViewCategoryLabel"
+                    style="@style/BookmarkLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/category"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
+                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
+                    />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/textViewNotes"
@@ -72,17 +92,23 @@
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
                     android:text="@string/notes"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />
+                    app:layout_constraintTop_toBottomOf="@+id/textViewCategoryLabel" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/textViewPhone"
                     style="@style/BookmarkLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:text="@string/phone"
                     app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
+                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />
 
@@ -92,17 +118,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/address"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toStartOf="@+id/barrier1"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
+                    app:layout_constraintTop_toBottomOf="@+id/textViewPhone"
+                    />
 
                 <androidx.constraintlayout.widget.Barrier
                     android:id="@+id/barrier1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:barrierDirection="start"
-                    app:constraint_referenced_ids="editTextName, editTextNotes,editTextPhone, editTextAddress" />
+                    app:constraint_referenced_ids="editTextName, editTextNotes,editTextPhone, editTextAddress,spinnerCategory" />
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextName"
@@ -113,10 +142,33 @@
                     android:text="@{bookmarkDetailsView.name}"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />
 
+                <ImageView
+                    android:id="@+id/imageViewCategory"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_other"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
+                    app:layout_constraintStart_toEndOf="@+id/barrier1"
+                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory"
+                    />
+                <Spinner
+                    android:id="@+id/spinnerCategory"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight='1.4'
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewCategory"
+                    app:layout_constraintTop_toBottomOf="@+id/editTextName"
+                    />
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextNotes"
                     style="@style/BookmarkEditText"
@@ -124,10 +176,12 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_notes"
                     android:text="@{bookmarkDetailsView.notes}"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
-                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+                    app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextPhone"
@@ -136,7 +190,9 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/phone_number"
                     android:text="@{bookmarkDetailsView.phone}"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
                     app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />
@@ -149,12 +205,22 @@
                     android:hint="@string/address"
                     android:inputType="textMultiLine"
                     android:text="@{bookmarkDetailsView.address}"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/barrier1"
-                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@android:drawable/ic_dialog_email"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
